@@ -9,7 +9,8 @@
 ccf.series.rwl(rwl, series, series.yrs = as.numeric(names(series)),
                seg.length = 50, bin.floor = 100, n = NULL,
                prewhiten = TRUE, biweight = TRUE, pcrit = 0.05,
-               lag.max = 5, make.plot = TRUE, ...)
+               lag.max = 5, make.plot = TRUE,
+               floor.plus1 = FALSE, ...)
 }
 \arguments{
   \item{rwl}{ a \code{data.frame} with series as columns and years as rows
@@ -25,15 +26,19 @@ ccf.series.rwl(rwl, series, series.yrs = as.numeric(names(series)),
   \item{n}{ \code{NULL} or an integer giving the filter length for the
     \code{\link{hanning}} filter used for removal of low frequency
     variation. }
-  \item{prewhiten}{ \code{logical} flag. If \code{TRUE} each series is whitened using
-      \code{\link[stats]{ar}}. }
-  \item{biweight}{ \code{logical} flag. If \code{TRUE} then a robust mean is calculated
-    using \code{\link{tbrm}}. }
+  \item{prewhiten}{ \code{logical} flag. If \code{TRUE} each series is
+    whitened using \code{\link[stats]{ar}}. }
+  \item{biweight}{ \code{logical} flag. If \code{TRUE} then a robust
+    mean is calculated using \code{\link{tbrm}}. }
   \item{pcrit}{ a number between 0 and 1 giving the critical value for the
     correlation test. }
   \item{lag.max}{ an integer giving the maximum lag at which to calculate
     the \code{\link[stats]{ccf}}. }
-  \item{make.plot}{ \code{logical flag} indicating whether to make a plot. }
+  \item{make.plot}{ \code{logical flag} indicating whether to make a
+    plot. }
+  \item{floor.plus1}{ \code{logical flag}. If \code{TRUE}, one year is
+    added to the base location of the first segment (e.g. 1601, 1701,
+    1801 AD). }
   \item{...}{ other arguments passed to plot. }
 }
 \details{
